examples/kju/positive/arithmetic/unary_operators_in_expressions.kju


fun kju():Unit{
	var x:Int=2++2;
	var y:Int=2+-2;
}