examples/kju/negative/variables/read_from_uninitialized_variable.kju
fun kju():Unit{
	var x:Int;
	var y:Int=x;
}